; ModuleID = '/home/carl/AnghaBench/linux/drivers/md/persistent-data/extr_dm-array.c_array_block_prepare_for_write.c'
source_filename = "/home/carl/AnghaBench/linux/drivers/md/persistent-data/extr_dm-array.c_array_block_prepare_for_write.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.dm_block_validator = type { i32 }
%struct.dm_block = type { i32 }
%struct.array_block = type { i32, i32, i32 }

@CSUM_XOR = common dso_local global i32 0, align 4
@llvm.used = appending global [1 x i8*] [i8* bitcast (void (%struct.dm_block_validator*, %struct.dm_block*, i64)* @array_block_prepare_for_write to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal void @array_block_prepare_for_write(%struct.dm_block_validator* %0, %struct.dm_block* %1, i64 %2) #0 {
  %4 = alloca %struct.dm_block_validator*, align 8
  %5 = alloca %struct.dm_block*, align 8
  %6 = alloca i64, align 8
  %7 = alloca %struct.array_block*, align 8
  store %struct.dm_block_validator* %0, %struct.dm_block_validator** %4, align 8
  store %struct.dm_block* %1, %struct.dm_block** %5, align 8
  store i64 %2, i64* %6, align 8
  %8 = load %struct.dm_block*, %struct.dm_block** %5, align 8
  %9 = call %struct.array_block* @dm_block_data(%struct.dm_block* %8)
  store %struct.array_block* %9, %struct.array_block** %7, align 8
  %10 = load %struct.dm_block*, %struct.dm_block** %5, align 8
  %11 = call i32 @dm_block_location(%struct.dm_block* %10)
  %12 = call i32 @cpu_to_le64(i32 %11)
  %13 = load %struct.array_block*, %struct.array_block** %7, align 8
  %14 = getelementptr inbounds %struct.array_block, %struct.array_block* %13, i32 0, i32 2
  store i32 %12, i32* %14, align 4
  %15 = load %struct.array_block*, %struct.array_block** %7, align 8
  %16 = getelementptr inbounds %struct.array_block, %struct.array_block* %15, i32 0, i32 0
  %17 = load i64, i64* %6, align 8
  %18 = sub i64 %17, 4
  %19 = load i32, i32* @CSUM_XOR, align 4
  %20 = call i32 @dm_bm_checksum(i32* %16, i64 %18, i32 %19)
  %21 = call i32 @cpu_to_le32(i32 %20)
  %22 = load %struct.array_block*, %struct.array_block** %7, align 8
  %23 = getelementptr inbounds %struct.array_block, %struct.array_block* %22, i32 0, i32 1
  store i32 %21, i32* %23, align 4
  ret void
}

declare dso_local %struct.array_block* @dm_block_data(%struct.dm_block*) #1

declare dso_local i32 @cpu_to_le64(i32) #1

declare dso_local i32 @dm_block_location(%struct.dm_block*) #1

declare dso_local i32 @cpu_to_le32(i32) #1

declare dso_local i32 @dm_bm_checksum(i32*, i64, i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
